RegressionTests/TestSuiteExport/accept/import.blade
// EXPECT: pass

import "uart.blade" as Uart;

cog task main() {
    Uart.init();
}