RegressionTests/TestSuiteExport/reject/break_in_rep.blade
// EXPECT: fail
// DIAGNOSTICS: InvalidBreakInRepLoop

fn helper() {
    rep loop {
        break;
    }
}

cog task main() {
}